Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-88386

qdoc: Cannot link to QML property groups loaded from index

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.0.0 RC
    • 6.0.0 Beta3
    • Build tools: qdoc
    • None
    • 8
    • 1a97130f20e787812684a8f9acd76c5feef59346 (qt/qttools/dev)
    • Da Vinci - sprint 21

      Link to a QML property group such as Item::anchors works only if linking from the same module, but not from an external module by loading qtquick.index.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes