qdoc: Fix linking to property groups

Only the members of a property group were written to .index, not the
group itself; this made cross-module linking to the group fail.

Fixes: QTBUG-88386
Change-Id: I096a2bbdd2b0af00c4d0e9a6974b6dc7dce075a2
Reviewed-by: Paul Wicking <paul.wicking@qt.io>